# Robomimic-Flowmatching

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: README.md  fm_square_lowdim.json
configs/benchmark/: dp_can_seed1.json  dp_can_seed2.json  dp_can_seed3.json  dp_lift_seed1.json  dp_lift_seed2.json  dp_lift_seed3.json  dp_square_seed1.json  dp_square_seed2.json  dp_square_seed3.json  dp_tool_hang_seed1.json  dp_tool_hang_seed2.json  dp_tool_hang_seed3.json  dp_transport_seed1.json  dp_transport_seed2.json  dp_transport_seed3.json  fm_can_seed1.json  fm_can_seed2.json  fm_can_seed3.json  fm_lift_seed1.json  fm_lift_seed2.json  fm_lift_seed3.json  fm_square_seed1.json  fm_square_seed2.json  fm_square_seed3.json  fm_tool_hang_seed1.json  fm_tool_hang_seed2.json  fm_tool_hang_seed3.json  fm_transport_seed1.json  fm_transport_seed2.json  fm_transport_seed3.json
configs/transformer/: fm_transformer_lift.json  fm_transformer_square.json  fm_transformer_square_big_seed1.json  fm_transformer_square_big_seed2.json  fm_transformer_square_big_seed3.json  fm_transformer_square_image.json  fm_transformer_square_image_seed2.json  fm_transformer_square_image_seed3.json  fm_transformer_square_seed2.json  fm_transformer_square_seed3.json  fm_transformer_square_xattn_seed1.json  fm_transformer_square_xattn_seed2.json  fm_transformer_square_xattn_seed3.json  fm_transformer_tool_hang_image.json  fm_transformer_tool_hang_image_seed2.json  fm_transformer_tool_hang_image_seed3.json  fm_transformer_transport_image.json  fm_transformer_transport_image_seed2.json  fm_transformer_transport_image_seed3.json
docs/: CONDITIONAL_FLOW_MATCHING.md
robomimic_cfm/: __init__.py  config.py  flow_matching.py  transformer_nets.py
robomimic_cfm/exps/templates/: flow_matching.json
scripts/: benchmark_inference.py  colab_train_fm.py  gen_benchmark_configs.py  render_image_dataset.sbatch  render_video.py  train.py  train_transformer.sbatch  train_transformer_chain.sbatch
tests/: test_flow_matching.py
