[project]
name = "robomimic-cfm"
version = "0.1.0"
description = "Conditional Flow Matching policy for robomimic (rectified flow / OT-CFM), a drop-in alternative to Diffusion Policy."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sourav Selvaraj", email = "krssourav@gmail.com" }]
keywords = ["robomimic", "imitation-learning", "flow-matching", "diffusion-policy", "robot-learning"]

dependencies = [
    "robomimic",
    "torch",
    "diffusers>=0.11.1",
    "numpy",
]

[project.optional-dependencies]
# rendering rollouts + the reproduction scripts
extras = ["imageio", "imageio-ffmpeg", "h5py", "tqdm"]

[project.urls]
Homepage = "https://github.com/souravselvaraj/robomimic-cfm"
Upstream = "https://github.com/ARISE-Initiative/robomimic"

# robomimic is not on PyPI at the 0.5.0 API this package targets, so for a local,
# reproducible build we depend on the sibling fork checkout that the benchmark
# results were produced against. For publication, replace this with a git pin,
# e.g.  robomimic = { git = "https://github.com/souravselvaraj/robomimic" }
[tool.uv.sources]
robomimic = { path = "../Flowmatch/robomimic", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robomimic_cfm"]
