[project]
name = "robomimic-cfm"
version = "0.1.0"
description = "Conditional Flow Matching policy for robomimic (rectified flow / OT-CFM), a drop-in alternative to Diffusion Policy."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sourav Selvaraj", email = "krssourav@gmail.com" }]
keywords = ["robomimic", "imitation-learning", "flow-matching", "diffusion-policy", "robot-learning"]

dependencies = [
    "robomimic",
    "torch",
    "diffusers>=0.11.1",
    "numpy",
]

[project.optional-dependencies]
# rendering rollouts + the reproduction scripts
extras = ["imageio", "imageio-ffmpeg", "h5py", "tqdm"]

[project.urls]
Homepage = "https://github.com/souravselvaraj/Robomimic-Flowmatching"
Upstream = "https://github.com/ARISE-Initiative/robomimic"

# robomimic on PyPI stops at 0.3.0, which predates the diffusion-policy backbone
# and 0.5.0 API this package builds on. We therefore depend on the robomimic fork
# the results were produced against, pinned by commit for reproducibility. `uv sync`
# clones it automatically, so a fresh clone of this repo builds without extra steps.
[tool.uv.sources]
robomimic = { git = "https://github.com/souravselvaraj/robomimic", rev = "562c8e323485391a049b67be41990f527b0f07a2" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robomimic_cfm"]
